@@ -52,7 +52,7 @@ void window_menu_file_start_logging_cb (GtkWidget *widget, gpointer data)
   g_return_if_fail (cd) ;
 
   if (cd->logging) {
-    g_snprintf(buf, 255, _("*** Already logging to %s. Close that log first.\n"),
+    g_snprintf(buf, 255, _("*** Already logging to %s. Close that log first.\r\n"),
       cd->log_filename) ;
     textfield_add(cd, buf, MESSAGE_ERR) ;
     return ;
@@ -71,7 +71,7 @@ void window_menu_file_stop_logging_cb (GtkWidget *widget, gpointer data)
   g_return_if_fail (cd) ;
 
   if (!cd->logging) {
-    textfield_add(cd, _("*** No log is open in this window to be closed.\n"),
+    textfield_add(cd, _("*** No log is open in this window to be closed.\r\n"),
       MESSAGE_ERR) ;
     return ;
   }
